--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="canais.jpg" class="d-block w-100" alt="...">
+                <img src="imgs/banner_01.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Canais ao Vivo</h5>
                     <p>Canais brasileiros, internacionais e muito mais, confira...</p>
